--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,6 @@
   padding: 0;
 }
 
-.studentForm {
-  /* position: inherit; */
-
-}
-
 .errorSpan {
   position: relative;
   left: 10px;
@@ -31,7 +26,19 @@ body {
   text-shadow: 0 0 3px #0d6829, 0 0 5px #03031b;
 }
 
-.container {
+.universityHeader{
+  justify-content: space-between;
+  position: relative;
+  align-items: center;
+  text-align: center;
+  color: white;
+  font-size: 70px;
+  margin-bottom: 20px;
+  left: 800px;
+  text-shadow: 0 0 3px #0d6829, 0 0 5px #03031b;
+}
+
+/* .container {
   max-width: 500px;
   margin: 30px auto;
   overflow: auto;
@@ -39,7 +46,7 @@ body {
   border: 1px solid steelblue;
   padding: 30px;
   border-radius: 5px;
-}
+} */
 
 .header {
   display: flex;
@@ -48,18 +55,137 @@ body {
   margin-bottom: 20px;
 }
 
+.content {
+  width: 60%;
+  float: left;
+  margin-left: 5px;
+}
+
+.clearBoth{
+clear: both;
+
+}
+.navbar{
+  height: 15cm;
+  width: 8cm;
+  margin-left: 5px;
+  float: left;
+}
+
+.adminNavbar{
+  height: 15cm;
+  width: 8cm;
+  margin-left: 5px;
+  float: left;
+}
+
+.mainlogo{
+  padding: 10px 250px;
+  margin: 5px;
+  left: 500px;
+  border-width: 1px;
+  border-color: black;
+}
+
 .btn {
   display: inline-block;
-  background: #000;
-  color: #fff;
-  border: none;
+  background: #fff;
+  color: rgb(100, 12, 56);
   padding: 10px 20px;
   margin: 5px;
+  /* border: none; */
   border-radius: 5px;
+  border-width: 1px;
+  border-color: rgb(100, 12, 56);
   cursor: pointer;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 20px;
+  font-style: bold;
   font-family: inherit;
+}
+
+.header-btn {
+  display: inline-block;
+  background: #fff;
+  color: rgb(100, 12, 56);
+  padding: 10px 20px;
+  margin: 5px;
+  /* border: none; */
+  border-radius: 5px;
+  border-width: 1px;
+  border-color: rgb(100, 12, 56);
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 20px;
+  font-style: bold;
+  font-family: inherit;
+}
+
+.adminNavbar-btn {
+  display: inline-block;
+  background: #fff;
+  color: rgb(100, 12, 56);
+  padding: 10px 20px;
+  margin: 5px;
+  margin-left: 20px;
+  /* left: 10px; */
+  /* border: none; */
+  border-radius: 5px;
+  border-width: 1px;
+  border-color: rgb(100, 12, 56);
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 20px;
+  font-style: bold;
+  font-family: inherit;
+  width: 130px;
+}
+.adminNavbar-btn:hover{
+  color: rgba(233, 55, 144, 0.979);
+  border-color: rgba(233, 55, 144, 0.979);
+  transform: scale(1.04);
+  transition: 100ms;
+}
+
+.adminNavbar-btn:active{
+  transform: scale(1);
+  /* transition: 50ms; */
+}
+
+.header-btn-login {
+  display: inline-block;
+  background: #fff;
+  color: rgb(100, 12, 56);
+  padding: 10px 20px;
+  margin: 5px;
+  /* border: none; */
+  border-radius: 5px;
+  border-width: 1px;
+  border-color: rgb(100, 12, 56);
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 20px;
+  font-style: bold;
+  font-family: inherit;
+  width: 110px;
+}
+
+.header-btn-login:hover{
+  color: rgba(233, 55, 144, 0.979);
+  border-color: rgba(233, 55, 144, 0.979);
+  transform: scale(1.04);
+}
+
+.header-btn:hover{
+  color: rgba(233, 55, 144, 0.979);
+  border-color: rgba(233, 55, 144, 0.979);
+  transform: scale(1.04);
+  transition: 100ms;
+}
+
+.header-btn:active{
+  transform: scale(1);
+  /* transition: 50ms; */
 }
 
 .btn:focus {
@@ -80,6 +206,13 @@ body {
   margin: 5px;
   padding: 6px 20px;
   cursor: pointer;
+}
+
+.studentsOptions{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+  width: 50px;
 }
 
 .task.reminder {
